<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icCatImgApp"
        android:layout_width="match_parent"
        android:layout_height="236dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/descrip_ic_vw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cat"
        app:tint="@color/color_ic_vw" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txtName"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/name"
        android:textColorHint="@color/color_hint"
        android:layout_marginTop="128dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icCatImgApp"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="375dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/color_hint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtName" />

    <Button
        android:id="@+id/bntLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/color_button"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        tools:layout_editor_absoluteY="550dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color_button"
        android:text="@string/register"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bntLogin"
        app:layout_constraintStart_toStartOf="@+id/bntLogin"
        app:layout_constraintTop_toBottomOf="@+id/bntLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>