<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_profe"
    tools:context=".IngresoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_lightbulb"
        app:tint="@color/black" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="116dp"
        android:autofillHints="username"
        android:background="@color/primary"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:background="@color/primary"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@id/txtName"
        app:layout_constraintStart_toStartOf="@id/txtName"
        app:layout_constraintTop_toBottomOf="@id/txtName" />


    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/button"
        android:text="@string/login"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/btn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        android:backgroundTint="@color/button"
        android:text="@string/register"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>